@@ -1,0 +1,4 @@
+
+EXTRA_DIST = quagga.pam quagga.sysconfig quagga.spec quagga.logrotate \
+	zebra.init ripd.init ospfd.init ripngd.init ospf6d.init bgpd.init \
+	isisd.init 
