@@ -1,9 +1,11 @@
 #
 # Default: Bind all daemon vtys to the loopback(s) only
 #
-BGPD_OPTS="-A 127.0.0.1"
-OSPF6D_OPTS="-A ::1"
-OSPFD_OPTS="-A 127.0.0.1"
-RIPD_OPTS="-A 127.0.0.1"
-RIPNGD_OPTS="-A ::1"
-ZEBRA_OPTS="-A 127.0.0.1"
+QCONFDIR="/etc/quagga"
+BGPD_OPTS="-A 127.0.0.1 -f ${QCONFDIR}/bgpd.conf"
+OSPF6D_OPTS="-A ::1$ -f ${QCONFDIR}/ospf6d.conf"
+OSPFD_OPTS="-A 127.0.0.1 -f ${QCONFDIR}/ospfd.conf"
+RIPD_OPTS="-A 127.0.0.1 -f ${QCONFDIR}/ripd.conf"
+RIPNGD_OPTS="-A ::1 -f ${QCONFDIR}/ripngd.conf"
+ZEBRA_OPTS="-A 127.0.0.1 -f ${QCONFDIR}/zebra.conf"
+ISISD_OPTS="-A ::1 -f ${QCONFDIR}/isisd.conf"
